# worms-speechbank-synthesis

./: .env-template  .envrc  .gitignore  .pre-commit-config.yaml  README.md  data.txt  main.ipynb  notes.txt  personalities.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
tests/: test_data.py
worms_speechbank_synthesis/: __main__.py  data.py  llm.py  tts.py
worms_speechbank_synthesis/data/: personalities.csv  soundbank.txt
